Fix overflow on desktop

--- a/_sass/code-highlighting.scss
+++ b/_sass/code-highlighting.scss
@@ -18,7 +18,7 @@ pre > code {
   font-size: 80%;
   padding: 1em;
   line-height: 1.4;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 // "VS" theme from https://jwarby.github.io/jekyll-pygments-themes/languages/javascript.html
